--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -31,6 +32,10 @@ footer, header, hgroup, menu, nav, section {
 body {
   line-height: 1;
   background-color: LightGray;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #838994;
+  letter-spacing: 0.03em;
 }
 
 div {
@@ -52,6 +57,7 @@ table {
   border-spacing: 0;
 }
 
+
 /* Nav Bar */
 .top-navigation {
   background-color: #fff;
@@ -61,4 +67,36 @@ table {
   width: 970px;
   height: 70px;
   margin: 0 auto;
+}
+
+.top-navigation .logo {
+  height: 70px;
+}
+
+.content {
+  padding: 0px 15px;
+}
+
+.top-navigation .links {
+  float: right;
+  font-family: 'Roboto', sans-serif;
+  color: #838994;
+  font-size: 16px;
+  margin-top: 25px;
+  -webkit-font-smoothing: antialiased;
+}
+
+.top-navigation .links li {
+  display: inline-block;
+  margin-left: 25px;
+}
+
+.top-navigation .links > .active {
+  color: #4c5058;
+  font-weight: 500;
+}
+
+.top-navigation .links li:hover {
+  cursor: pointer;
+  color: #333333;
 }
